# disable-windows-keys

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  Gemfile  LICENSE.txt  README.md  _config.yml  build.bat  bundle.js  index.html  style.scss
.github/workflows/: ci.yml
_data/: games.yaml  lang.yaml
_includes/js/: analytics.html  ecommerce.js  gtm.body.html  gtm.head.html  modal.js  tawk.js
_layouts/: base.html  index.html
_posts/: 2020-03-11-welcome-to-jekyll.markdown
_sass/: colors.scss  fonts.scss  layout.scss  reset.scss  utilities.scss
_sass/components/: btn.scss  card.scss  footer.scss  modal.scss
app/: CMakeLists.txt  app.c  hook.c  hook.def  mainwindow.c  mainwindow.h  resource.h  resource.rc  shared.h  stdafx.h  version.h
en/: index.html
fr/: index.html
setup/: CMakeLists.txt  disable-windows-keys.iss
setup/Languages/: English.isl  French.isl  German.isl  Spanish.isl
setup/Licenses/: French.txt  German.txt
